Bug 507248 - Kwin crashes on login with magnifier enabled and InitialZoom > 1
Summary: Kwin crashes on login with magnifier enabled and InitialZoom > 1
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.4.3
Platform: Arch Linux Linux
: VHI crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-19 22:17 UTC by jacob ham
Modified: 2025-07-25 15:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.4
Sentry Crash Report:


Attachments
Kwin_wayland backtrace (5.57 KB, text/plain)
2025-07-19 22:17 UTC, jacob ham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jacob ham 2025-07-19 22:17:00 UTC
Created attachment 183361 [details]
Kwin_wayland backtrace

SUMMARY
Enabling the magnifier effect in system settings crashes Kwin. Users who have the effect enabled at login are unable to use Plasma.

STEPS TO REPRODUCE
1. Go to system settings
2. Enable "magnifier" under desktop effects

OBSERVED RESULT
kwin_wayland crashes and the user is returned either to tty or their login manager.

EXPECTED RESULT
kwin should let you use the magnifier.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
https://bbs.archlinux.org/viewtopic.php?pid=2252529#p2252529
Discussion of the same issue on the Arch Linux forums
Comment 1 jacob ham 2025-07-20 00:24:27 UTC
Further investigation reveals that this crash only occurs when the magnifier effect is loaded and InitialZoom != 1 in kwinrc. This means that logging out without first zooming out the magnifier will cause the next login to fail.
Comment 2 Bug Janitor Service 2025-07-22 19:48:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7926
Comment 3 Zamundaaa 2025-07-23 12:39:38 UTC
Git commit 407fa6ee9367e8f00488b83d0be8b18261391c59 by Xaver Hugl.
Committed on 23/07/2025 at 12:06.
Pushed by zamundaaa into branch 'master'.

plugins/magnifier: actually set the initial zoom properly

toggle() doesn't actually do anything if the current zoom level is 1.0 and
target zoom is not 1.0

M  +1    -4    src/plugins/magnifier/magnifier.cpp

https://invent.kde.org/plasma/kwin/-/commit/407fa6ee9367e8f00488b83d0be8b18261391c59
Comment 4 Zamundaaa 2025-07-23 12:39:46 UTC
Git commit de0394cf9c2ac149b3d8e6140d6e340ae6afb521 by Xaver Hugl.
Committed on 23/07/2025 at 12:06.
Pushed by zamundaaa into branch 'master'.

plugins/magnifier: allocate an fbo when rendering, and don't crash if it fails

This is less error prone and can actually handle GPU resets

M  +18   -24   src/plugins/magnifier/magnifier.cpp

https://invent.kde.org/plasma/kwin/-/commit/de0394cf9c2ac149b3d8e6140d6e340ae6afb521
Comment 5 Zamundaaa 2025-07-23 13:44:24 UTC
Git commit 4e1e1d65f488d764e1ddbb18888b2c6509fd4642 by Xaver Hugl.
Committed on 23/07/2025 at 12:56.
Pushed by zamundaaa into branch 'Plasma/6.4'.

plugins/magnifier: actually set the initial zoom properly

toggle() doesn't actually do anything if the current zoom level is 1.0 and
target zoom is not 1.0
(cherry picked from commit 407fa6ee9367e8f00488b83d0be8b18261391c59)

M  +1    -4    src/plugins/magnifier/magnifier.cpp

https://invent.kde.org/plasma/kwin/-/commit/4e1e1d65f488d764e1ddbb18888b2c6509fd4642
Comment 6 Zamundaaa 2025-07-23 13:44:33 UTC
Git commit e1c80aed50288255c14a55a71b9759dcef2bd4da by Xaver Hugl.
Committed on 23/07/2025 at 12:57.
Pushed by zamundaaa into branch 'Plasma/6.4'.

plugins/magnifier: allocate an fbo when rendering, and don't crash if it fails

This is less error prone and can actually handle GPU resets
(cherry picked from commit de0394cf9c2ac149b3d8e6140d6e340ae6afb521)

M  +18   -24   src/plugins/magnifier/magnifier.cpp

https://invent.kde.org/plasma/kwin/-/commit/e1c80aed50288255c14a55a71b9759dcef2bd4da