plugins/magnifier: actually set the initial zoom properly

toggle() doesn't actually do anything if the current zoom level is 1.0 and
target zoom is not 1.0

BUG: 507248